@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Support for older percona mysqld's that need mysql_install_db run
+
 0.000016  2020-11-13 11:28:35-08:00 America/Los_Angeles
 
     - Support older version of percona
